<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.mad.iti.weather.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.mad.iti.weather.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorite" >
        <action
            android:id="@+id/action_navigation_favorites_to_showFavDetailsFragment"
            app:destination="@id/showFavDetailsFragment"
            app:popUpTo="@id/navigation_favorites" />
    </fragment>

    <fragment
        android:id="@+id/navigation_alarm"
        android:name="com.mad.iti.weather.ui.alarm.AlarmFragment"
        android:label="@string/title_alarm"
        tools:layout="@layout/fragment_alarm" />
    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.mad.iti.weather.ui.setting.SettingFragment"
        android:label="fragment_setting"
        tools:layout="@layout/fragment_setting" />
    <fragment
        android:id="@+id/showFavDetailsFragment"
        android:name="com.mad.iti.weather.ui.favorite.ShowFavDetailsFragment"
        android:label="fragment_show_fav_details"
        tools:layout="@layout/fragment_show_fav_details" >
        <argument
            android:name="id"
            app:argType="string" />
    </fragment>
</navigation>