<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".ui.setting.SettingFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="24dp"
        android:elevation="16dp"
        app:cardCornerRadius="32dp"
        android:backgroundTint="@color/background">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/textColor"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline6"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toBottomOf="@id/radioGroupChooseLanguage" />

            <View
                android:id="@+id/view2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/textColor"
                app:layout_constraintEnd_toStartOf="@+id/guideline6"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toBottomOf="@id/radioGroupLocation" />

            <View
                android:id="@+id/view3"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/textColor"
                app:layout_constraintEnd_toEndOf="@+id/guideline6"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toBottomOf="@id/radioGroupTempDegree" />

            <RadioGroup
                android:id="@+id/radioGroupTempDegree"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/radio_button_1"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@+id/guideline6"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <RadioButton
                    android:id="@+id/radio_button_C"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="0dp"
                    android:buttonTint="@color/textColor"
                    android:fontFamily="@font/cairo"
                    android:text="@string/celsius"
                    android:textColor="@color/textColor"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radio_button_K"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="0dp"
                    android:buttonTint="@color/textColor"
                    android:fontFamily="@font/cairo"
                    android:text="@string/kelvin"
                    android:textColor="@color/textColor"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radio_button_F"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="0dp"
                    android:buttonTint="@color/textColor"
                    android:fontFamily="@font/cairo"
                    android:text="@string/fahrenheit"
                    android:textColor="@color/textColor"
                    android:textSize="20sp" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/radioGroupWindSpeed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/radio_button_1"
                android:gravity="center"
                android:layout_marginBottom="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline6"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toBottomOf="@+id/textView5">

                <RadioButton
                    android:id="@+id/radio_button_MPerSec"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:buttonTint="@color/textColor"
                    android:fontFamily="@font/cairo"
                    android:paddingHorizontal="16dp"
                    android:text="@string/meter_per_second"
                    android:textColor="@color/textColor"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radio_button_MilePerHour"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:buttonTint="@color/textColor"
                    android:fontFamily="@font/cairo"
                    android:paddingHorizontal="16dp"
                    android:text="@string/mile_per_hour"
                    android:textColor="@color/textColor"
                    android:textSize="20sp" />


            </RadioGroup>

            <RadioGroup
                android:id="@+id/radioGroupChooseLanguage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/radio_button_1"
                android:gravity="center"
                app:layout_constraintEnd_toStartOf="@+id/guideline6"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toBottomOf="@+id/textView3">

                <RadioButton
                    android:id="@+id/radio_button_English"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="0dp"
                    android:buttonTint="@color/textColor"
                    android:fontFamily="@font/cairo"
                    android:paddingHorizontal="16dp"
                    android:text="@string/english"
                    android:textColor="@color/textColor"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radio_button_Arabic"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="0dp"
                    android:buttonTint="@color/textColor"
                    android:fontFamily="@font/cairo"
                    android:paddingHorizontal="16dp"
                    android:text="@string/arabic"
                    android:textColor="@color/textColor"
                    android:textSize="20sp" />


            </RadioGroup>

            <RadioGroup
                android:id="@+id/radioGroupLocation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/radio_button_1"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@+id/guideline6"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

                <RadioButton
                    android:id="@+id/radio_button_GPS"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="0dp"
                    android:buttonTint="@color/textColor"
                    android:fontFamily="@font/cairo"
                    android:text="@string/gps"
                    android:textColor="@color/textColor"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radio_button_map"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="0dp"
                    android:buttonTint="@color/textColor"
                    android:fontFamily="@font/cairo"
                    android:text="@string/map"
                    android:textColor="@color/textColor"
                    android:textSize="20sp" />

            </RadioGroup>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/temperature"
                android:textColor="@color/textColor"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toBottomOf="@+id/view2" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/location"
                android:textColor="@color/textColor"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="32dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="32dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/language"
                android:textColor="@color/textColor"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/wind_speed"
                android:textColor="@color/textColor"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toBottomOf="@+id/view3" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.core.widget.NestedScrollView>